2016-02-09  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/amgetconf.pl: s/unknown/Unknown/

2016-02-09  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/amgetconf.pl: Test the result of 'amgetconf --platform'
	  and 'amgetconf --distro' are not "unknown"

2016-02-09  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amutil.c (get_platform_and_distro, get_platform,
	  get_distro): New functions toreturn platform and distro
	* common-src/amutil.h (get_platform_and_distro, get_platform,
	  get_distro): Add prototypes
	* client-src/selfcheck.c: Use get_platform_and_distro()
	* common-src/amgetconf.pl: Add --platform and --distro arguments
	* man/xml-source/amgetconf.8.xml: Document --platform and --distro
	* perl/Amanda/Util.swg: Swig get_platform and get_distro
	* NEWS: Add new --platform and --distro argument of amgetconf

2016-02-08  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Status.pm: Fix for taper FAILED
	* perl/Amanda/Taper/Worker.pm: Wait to get the device before checking
	  if it support the requested data_path
	* server-src/driver.c: Fix reporting
	* server-src/driver.c: Use any idle wtaper
	* server-src/dumper.c: Do not send the header to the taper until some
	  data is received

2016-02-05  Jean-Louis Martineau <martineau@zmanda.com>
	* config/libtool.m4, config/ltmain.sh, config/ltoptions.m4,
	  config/ltsugar.m4, config/ltversion.m4,
	  config/lt~obsolete.m4: Upgrade lintool to 2.4.6

2016-02-05  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ambsdtar.c, application-src/amgtar.c,
	  application-src/amstar.c (*_backup): Send message to mesgstream

2016-02-04  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/Makefile.am: s/CFLAGS/AM_CFLAGS/

2016-02-04  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amfetchdump.8.xml: Add --run-client-scripts

2016-02-04  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/defaults.m4: Add --with-security-file configure option